<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A0C1C5"
    tools:context=".LoginActivity">

    <!-- Logo dan Nama Aplikasi -->
    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="261dp"
            android:layout_height="261dp"
            android:src="@drawable/ic_logo_signlingo"
            android:contentDescription="@string/app_logo" />

    </LinearLayout>

    <!-- Konten Login -->
    <LinearLayout
        android:id="@+id/loginContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logoLayout"
        android:layout_marginTop="50dp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_background">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hi, there!"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_background_enabled"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/button_background_enabled"
            android:textColor="@android:color/white"
            android:layout_marginBottom="20dp" />

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginBottom="20dp">-->

<!--            <View-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@android:color/darker_gray" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="or"-->
<!--                android:textColor="@android:color/darker_gray"-->
<!--                android:layout_marginHorizontal="10dp" />-->

<!--            <View-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@android:color/darker_gray" />-->
<!--        </LinearLayout>-->

    </LinearLayout>
</RelativeLayout>
